# deditor

./: .gitignore  Cargo.toml  README.md  components.json  cspell.config.yaml  electron-builder.yml  electron.vite.config.ts  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
.github/workflows/: build-app.yml  ci.yml  release-app.yml
apps/deditor/: ai.moeru.deditor.desktop  ai.moeru.deditor.flatpak.yml  components.json  drizzle.config.ts  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/deditor/drizzle/: 0000_redundant_lady_deathstrike.sql
apps/deditor/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/deditor/src/main/: index.ts
apps/deditor/src/preload/: index.ts
scripts/: get-package-json-version.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/basic/: Button.vue
src/components/table/: Chat.vue
src/components/ui/button/: Button.vue  index.ts
src/components/ui/checkbox/: Checkbox.vue
src/components/ui/dropdown-menu/: DropdownMenuCheckboxItem.vue  DropdownMenuContent.vue  DropdownMenuItem.vue  DropdownMenuLabel.vue  (+5 more)
src/composables/: use-duckdb.ts  use-xsai-transformers.ts
src/main/: index.ts
src/main/electron/: define-ipc-handler.ts
src/pages/: explore.vue  index.vue
src/pages/debug/: embedding.vue
src/renderer/src/: App.vue
src/styles/: theme.css
tests/docker/: docker-compose.yaml
(+125 files in other folders)
