[package]
name = "app"
version.workspace = true
description = "Dataset editor"
repository = "https://github.com/moeru-ai/deditor"
authors = [ "Neko Ayaka <neko@moeru.ai>" ]
edition = "2021"
rust-version = "1.77.2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deditor_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri-plugin-prevent-default = "2.0.0"
tauri-plugin-log = "2.4.0"
log = "0.4.27"
tauri-plugin-os = "2.2.1"
